@@ -2,3 +2,4 @@
 Bundle-Vendor.0 = Eclipse Linux Tools
 Bundle-Name.0 = Massif Plug-in
 editor.name.0 = Heap Chart
+massifLaunchConfiguration.name.0 = Heap Usage [Valgrind]
